add_executable(echo_client205 echo_client2.c)
add_executable(My_op_client05 My_op_client.c)
add_executable(My_op_server05 My_op_server.c)
add_executable(op_client05 op_client.c)
add_executable(op_server05 op_server.c)
add_executable(tcp_client_kehou505 homework/tcp_client_kehou5.c)
add_executable(tcp_client_kehou605 homework/tcp_client_kehou6.c)
add_executable(tcp_server_kehou505 homework/tcp_server_kehou5.c)
add_executable(tcp_server_kehou605 homework/tcp_server_kehou6.c)