add_executable(echo_mpclient10 echo_mpclient.c)
add_executable(echo_mpserv10 echo_mpserv.c)
add_executable(remove_zomebie10 remove_zomebie.c)
add_executable(test_server10 test_server.c)
add_executable(fork10 fork.c)
add_executable(signal10 signal.c)
add_executable(wait10 wait.c)
add_executable(waitpid10 waitpid.c)
add_executable(zombie10 zombie.c)
add_executable(sigaction10 sigaction.c)
add_executable(kehou310 homework/kehou3.c)
add_executable(kehou510 homework/kehou5.c)